--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/todo
+spring.datasource.username=root
+spring.datasource.password=superbom
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+spring.jpa.hibernate.ddl-auto=update
